--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ ul {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #ececec;
+  width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .header-conteiner {
