--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,14 @@ body {
   margin-left: auto; */
 }
 
+.conteiner {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -68,17 +76,10 @@ ul {
   list-style: none;
 }
 
+
 .contact-list-item:not(:last-child) {
   margin-right: 50px;
 }
-
-/* .contact-list-item::before {
-  content: "";
-  width: 16px;
-  height: 12px;
-  background-color: red;
-
-} */
 
 .logo-link-text,
 .logo-link {
@@ -140,8 +141,16 @@ ul {
   color: var(--additional-cl);
 }
 
+.contact-icon:hover,
+.contact-icon:focus {
+  fill: var(--additional-cl);
+}
+
+
+
+
 .contact-link {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   gap: 10px;
   padding-top: 32px;
@@ -159,10 +168,10 @@ ul {
   fill: var(--subtext-color);
 }
 
-.contact-icon:hover,
+/* .contact-icon:hover,
 .contact-icon:focus {
-  fill: var(--additional-cl);
-}
+  fill: currentColor;
+} */
 
 .footer-link {
   font-style: normal;
@@ -273,7 +282,28 @@ ul {
   margin-right: 30px;
 }
 
-.org-list-item::before {
+.org-icon {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  
+  margin-bottom: 30px;
+} 
+
+.org-item-icon {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: var(--portfolio-btn-cl);
+  border-radius: 4px;
+  gap: 30px;
+  width: 270px;
+  height: 120px;
+}
+
+
+
+/* .org-list-item::before {
   content: "";
   display: block;
   height: 120px;
@@ -282,9 +312,10 @@ ul {
   background-repeat: no-repeat;
   background-position: center;
   background-color: #f5f4fa;
-}
+} */
 
-.icon-antenna::before {
+/* .icon-antenna::before {
+  content: "";
   background-image: url(../images/section-org.svg/antenna.svg);
 }
 
@@ -294,12 +325,13 @@ ul {
 }
 
 .icon-diagram::before {
+  content: "";
   background-image: url(../images/section-org.svg/diagram.svg);
 }
-
 .icon-astronaut::before {
-  background-image: url(../images/section-org.svg/astronaut.svg);
-}
+  content: "";
+  background-image: url(../images/icon.svg#astronaut);
+} */
 
 .org-list-item:last-child {
   margin-right: 0;
@@ -362,9 +394,12 @@ ul {
 /* team-card */
 
 .team-section {
+  max-width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 94px;
   padding-bottom: 94px;
-  background-color: var(--additional-bg-cl);
+  background-color: var(--portfolio-btn-cl);
 }
 
 .team-suptitle {
@@ -456,11 +491,82 @@ ul {
   fill: var(--icon-cl);
 }
 
+/* Постійні клієнти */
+
+.client {
+  max-width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--main-bg-cl);
+}
+
+.client-title {
+  margin: 0;
+  margin-bottom: 50px;
+
+  font-family: var(--Roboro-txt);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  color: var(--text-color);
+}
+
+.client-list {
+  display: flex;
+  gap: 30px;
+
+  margin: 0;
+}
+
+.client-item {
+   width: 170px;
+   height: 92px;
+}
+
+.client-link:hover,
+.client-link:focus {
+  border-color: var(--additional-cl);
+}
+
+.client-link:hover .client-icon,
+.client-link:focus .client-icon{
+  fill: var(--additional-cl);
+}
+
+
+.client-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  
+}
+
+.client-icon {
+  fill: var(--icon-cl);
+}
+
 /* footer */
 
+.footer-conteiner {
+  display: flex;
+  align-items: baseline;
+  gap: 70px;
+}
+
 .footer {
+  max-width: 1600px;
   padding-top: 60px;
   padding-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo-text {
@@ -489,6 +595,58 @@ ul {
 
 .footer {
   background-color: var(--headfooter-bg-cl);
+}
+
+.footer-title {
+  margin-bottom: 20px;
+  margin-top: 0;
+  font-family: var(--Roboro-txt);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  text-transform: uppercase;
+  color: var(--main-bg-cl);
+}
+
+.footer-list-icon {
+  display: flex;
+  gap: 10px;
+
+  margin: 0;
+}
+
+.footer-link-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+
+  border-radius: 50%;
+}
+
+.footer-socials-icon {
+  fill: var(--main-bg-cl);
+}
+
+.footer-item-icon {
+  align-items: center;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-item-icon:hover,
+.footer-item-icon:focus {
+  background-color: var(--additional-cl);
+}
+
+.socials-conteiner {
+  width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .address {
@@ -594,22 +752,13 @@ ul {
   width: calc(100% / 3 - 30px);
 }
 
-/* .proj-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-} */
-
-/* .proj-item:nth-child(3n) {
-  margin-right: 0;
-} */
 
 .proj-link {
   text-decoration: none;
 }
 
-.conteiner {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+.proj-item:hover,
+.proj-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
