--- a/css/style.css
+++ b/css/style.css
@@ -636,8 +636,8 @@ ul {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.footer-item-icon:hover,
-.footer-item-icon:focus {
+.footer-link-icon:hover,
+.footer-link-icon:focus {
   background-color: var(--additional-cl);
 }
 
